# meshtool

./: .clang  .gitignore  CMakeLists.txt  LICENSE  README.md
bin2ascii/: CMakeLists.txt
bin2ascii/src/: bin2ascii.cpp
include/: colmap.h  face.h
lib/: CMakeLists.txt
lib/tinyply/: CMakeLists.txt
src/: CMakeLists.txt  colmap.cpp  face.cpp  meshtool.cpp  meshtool.h  vertex.cpp  vertex.h
